tests/bad_programs/type_errors/redecl_fun.notc
int fun() {
    return 1;
}

int fun() {
    return 2;
}

int main() {
    return 0;
}
